--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
 18.2
 -----
 * [*] Set the post formats to have 'Standard' first and then alphabetized the remaining items. [#17074]
+* [*] Added pull-to-refresh to My Site.
 
 18.1
 -----
