--- a/WordPress/Resources/pl.lproj/Localizable.strings
+++ b/WordPress/Resources/pl.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-08-24 19:10:27+0000 */
+/* Translation-Revision-Date: 2021-08-28 09:24:30+0000 */
 /* Plural-Forms: nplurals=3; plural=(n == 1) ? 0 : ((n % 10 >= 2 && n % 10 <= 4 && (n % 100 < 12 || n % 100 > 14)) ? 1 : 2); */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: pl */
@@ -4046,7 +4046,7 @@ translators: Block name. %s: The localized block name */
 "Media uploaded (1 file)" = "Media uploaded (1 file)";
 
 /* Medium image size. Should be the same as in core WP. */
-"Medium" = "Średnia";
+"Medium" = "Średnio";
 
 /* No comment provided by engineer. */
 "Mention" = "Mention";
@@ -5376,7 +5376,7 @@ translators: Block name. %s: The localized block name */
 "Publishing..." = "Publishing...";
 
 /* Title of screen showing site purchases */
-"Purchases" = "Zakupy";
+"Purchases" = "Zamówienia";
 
 /* Mobile Push Notifications */
 "Push Notifications" = "Push Notifications";
@@ -7097,14 +7097,14 @@ translators: Block name. %s: The localized block name */
 /* Error message displayed when unable to close user account due to unresolved chargebacks. */
 "This user account cannot be closed if there are unresolved chargebacks." = "This user account cannot be closed if there are unresolved chargebacks.";
 
-/* Error message displayed when unable to close user account due to having active atomic site. */
-"This user account cannot be closed while it has active atomic sites." = "This user account cannot be closed while it has active atomic sites.";
-
 /* Error message displayed when unable to close user account due to having active purchases. */
 "This user account cannot be closed while it has active purchases." = "This user account cannot be closed while it has active purchases.";
 
 /* Error message displayed when unable to close user account due to having active subscriptions. */
 "This user account cannot be closed while it has active subscriptions." = "This user account cannot be closed while it has active subscriptions.";
+
+/* Error message displayed when unable to close user account due to having active atomic site. */
+"This user account could not be closed. Please contact us by going to Me > Help & Support screen." = "This user account could not be closed. Please contact us by going to Me > Help & Support screen.";
 
 /* A description of the twitter sharing setting.
    Information about the twitter sharing feature. */
@@ -7536,7 +7536,7 @@ translators: Block name. %s: The localized block name */
 "Unable to write image to file" = "Unable to write image to file";
 
 /* Unapproves a Comment */
-"Unapprove" = "Cofnij akceptację";
+"Unapprove" = "Odrzuć";
 
 /* VoiceOver accessibility hint, informing the user the button can be used to unapprove a comment */
 "Unapproves the Comment." = "Unapproves the Comment.";
